# scanndata-

./: .gitignore  README.md  changelog.md  main.py  pyproject.toml  requirements.txt  requirements_test.txt  setup.iss
assets/styles/: styles.py
componentesUI/: appbar.py  calendarioUI.py  card_presentacion.py  extraccionUI.py  facturas_uix.py  loadingUI.py  menubar_tabla.py  navbar.py  openmenu.py  railExtraccionUI.py  railFacturas.py
handlers/: handlers_calendario.py  handlers_extraccion_page.py  handlers_facturas.py  handlers_go_send_email.py  handlers_gsheet.py  handlers_inventario.py  handlers_navegacion.py  handlers_navegacion_extract.py  handlers_navegacion_facturas.py  handlers_tables.py
pages/: calendario.py  extraccion_imagenes_pdf.py  extraccion_page.py  extraccion_page_texto.py  extraccion_text.py  facturas_edit.py  facturas_page.py  home.py  inventario_page.py  send_email_page.py  tables_view copy.py  tables_view.py
plantillas/: factura.html  factura.py  factura_final.docx  plantilla.docx  ~$antilla.docx
utils/: client.py  constantes.py  dialog.py  exportacion.py  facturas_utils.py  generate_uid.py  google_calendar_class.py  google_sheets_actions.py  inventario_utils.py  llm.py  openmenu.py  reconocimiento copy.py  reconocimiento.py  send_email.py  tabla_utils.py
