[project]
name = "Ext Data 0.1"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Mat Per Nau", email = "lit.io30303@gmail.com" }
]
dependencies = [
    "flet==0.27.1",
    "pytesseract==0.3.13",
    "python-dotenv==1.0.1",
    "opencv-python==4.11.0.86",
    "pypdf==5.3.0",
    "groq==0.18.0",
    "gspread==6.1.4",
    "pandas==2.2.3",
]


[tool.flet.splash]
dark_color = "#8B8000"
web = true



[tool.flet]
org = "com.extdata"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Ext Data v0.1"

# company name to display in about app dialogs
company = "LLLIT"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by LLLIT"





[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.1",
    "pytest==7.2.1",
    "black==22.12.0",
    "isort==5.10.1",
    "mypy==0.991"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.26.0"}
pytest = "7.2.1"
black = "22.12.0"
isort = "5.10.1"
mypy = "0.991"